syntax = "proto3";

package proto;

import "google/api/annotations.proto";

option go_package = "/pb/product_service";

//PRODUCT
message Product {
    string Slug = 1;
    string Title = 2;
    string Category = 3;
    uint64 Price = 4;
    string Description = 5;
}

//FILTER
message Filter {
    string Name = 1;
    string Category = 2;
    uint64 MinPrice = 3;
    uint64 MaxPrice = 4;
}

//CREATE PRODUCT
message CreateProductRequest{
    string Title = 1;
    string Category = 2;
    uint64 Price = 3;
    string Description = 4;
}

message CreateProductResponse {
    Product Product = 1;
}

//UPDATE PRODUCT
message UpdateProductRequest {
    Product Product = 1;
    string Slug = 2;
}

message UpdateProductResponse {
    Product Product = 1;
}

//DELETE PRODUCT
message DeleteProductRequest {
    string Slug = 1;
}

message DeleteProductResponse {
    string Result = 1;
}

//GET PRODUCT
message GetProductRequest {
    string Slug = 1;
}

message GetProductResponse {
    Product Product = 1;
}

//Search PRODUCT
message SearchProductRequest {
    Filter Filter = 1;
}

message SearchProductResponse {
    repeated Product Product = 1;
}


service ProductService{
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse){
        option (google.api.http) = {
            post: "/api/products"
            body: "*"
        };
    };

    rpc UpdateProduct (UpdateProductRequest) returns (UpdateProductResponse){
        option (google.api.http) = {
            post: "/api/products/{Slug}"
            body: "*"
        };
    };

    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse){
        option (google.api.http) = {
            delete: "/api/products/{Slug}"
        };
    };

    rpc GetProduct (GetProductRequest) returns (GetProductResponse){
        option (google.api.http) = {
            get: "/api/products/{Slug}"
        };
    };

    rpc SearchProduct (SearchProductRequest) returns (stream SearchProductResponse){
        option (google.api.http) = {
            post: "/api/products/search"
            body: "*"
        };
    };
}